timestamp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hashgenerator-dep

spec:
    replicas: 1
    selector:
        matchLabels:
            app: hashgenerator
    template:
        metadata:
            labels:
                app: hashgenerator

        spec:
            containers:
                - name: hashgenerator
                  image: aitoaarni/hash-timestamp:1.7
                  ports:
                      - containerPort: 8000
