timestamp/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: hashresponse-svc
spec:
    type: ClusterIP
    selector:
        app: hashgenerator
    ports:
        - port: 2345
          protocol: TCP
          targetPort: 8000
